Dropdown menu z-index corrected

--- a/src/components/NewPost/NewPost.scss
+++ b/src/components/NewPost/NewPost.scss
@@ -135,6 +135,7 @@ $mid-screen: 800px;
     background: none;
     box-shadow: 0 0 15px #b0a8a6;
     border-radius: 10px;
+    z-index: 2;
 
     //font-size del texto dentro del editor
     p {
